--- a/src/main/resources/shop.yml
+++ b/src/main/resources/shop.yml
@@ -38,8 +38,26 @@ main-menu:
         - "&7Pour creuser vite"
       slot: 14
       category: 'tools_category'
+    'potions':
+      material: BREWING_STAND
+      name: "&dPotions"
+      lore:
+        - "&7Effets temporaires puissants"
+      slot: 15
+      category: 'potions_category'
+    'ranged':
+      material: BOW
+      name: "&6Combat à Distance"
+      lore:
+        - "&7Arcs et flèches"
+      slot: 16
+      category: 'ranged_category'
 
 # Définition d'une catégorie d'objets
+# Chaque item peut définir des effets de potion via `potion-effects`
+#   - { type: SPEED, duration: 45, amplifier: 0 }  # durée en secondes
+# et des enchantements via `enchantments`
+#   - { type: POWER, level: 1 }
 shop-categories:
   'quick_buy_category':
     title: "Achats Rapides"
@@ -213,6 +231,22 @@ shop-categories:
           amount: 6
         slot: 20
         action: 'HEALER_MILK'
+      'golden_apple':
+        material: GOLDEN_APPLE
+        name: "&6Pomme d'Or"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 3
+        slot: 21
+      'water_bucket':
+        material: WATER_BUCKET
+        name: "&9Seau d'eau"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 3
+        slot: 22
 
   'armors_category':
     title: "Armures"
@@ -330,4 +364,70 @@ shop-categories:
           resource: IRON
           amount: 20
         slot: 12
+
+  'potions_category':
+    title: "Potions"
+    rows: 3
+    items:
+      'speed_potion':
+        material: POTION
+        name: "&bPotion de Vitesse (45s)"
+        amount: 1
+        cost:
+          resource: EMERALD
+          amount: 1
+        slot: 10
+        potion-effects:
+          - { type: SPEED, duration: 45, amplifier: 0 }
+      'jump_potion':
+        material: POTION
+        name: "&bPotion de Saut (45s)"
+        amount: 1
+        cost:
+          resource: EMERALD
+          amount: 1
+        slot: 11
+        potion-effects:
+          - { type: JUMP, duration: 45, amplifier: 1 }
+      'invisibility_potion':
+        material: POTION
+        name: "&bPotion d'Invisibilité (30s)"
+        amount: 1
+        cost:
+          resource: EMERALD
+          amount: 2
+        slot: 12
+        potion-effects:
+          - { type: INVISIBILITY, duration: 30, amplifier: 0 }
+
+  'ranged_category':
+    title: "Combat à Distance"
+    rows: 3
+    items:
+      'arrows':
+        material: ARROW
+        name: "&fFlèches"
+        amount: 8
+        cost:
+          resource: GOLD
+          amount: 2
+        slot: 10
+      'bow':
+        material: BOW
+        name: "&fArc"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 12
+        slot: 11
+      'power_bow':
+        material: BOW
+        name: "&6Arc Puissant"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 24
+        slot: 12
+        enchantments:
+          - { type: POWER, level: 1 }
 
