fix(build): Correct Citizens dependency feat(integrations): Add Citizens API support for custom-skinned NPCs

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: ${project.version}
 main: com.heneria.bedwars.HeneriaBedwars
 api-version: '1.21'
 author: tomashb
+softdepend: [Citizens]
 
 commands:
   bedwars:
@@ -19,6 +20,9 @@ permissions:
   heneriabw.admin.setmainlobby:
     description: Définit le lobby principal BedWars.
     default: op
-  heneriabw.admin.setjoinnpc:
-    description: Place un PNJ de sélection d'arène.
-    default: op
+    heneriabw.admin.setjoinnpc:
+      description: Place un PNJ de sélection d'arène.
+      default: op
+    heneriabw.admin.setshopnpc:
+      description: Place un PNJ de boutique pour une équipe.
+      default: op
