--- a/src/main/resources/tablist.yml
+++ b/src/main/resources/tablist.yml
@@ -2,5 +2,6 @@ header: |
   &b&lHENERIA BEDWARS
   &7Vous êtes sur le serveur &eBedWars-1
 footer: |
-  &7Joueurs en ligne: &a%server_online%/%server_max_players%
+  &bGrades, Henacoins et boosts rendez-vous sur heneria.com
+  &7Joueurs en ligne: &a%server_online%
   &bheneria.com
