feat(npc): Add item presentation and levitation animations to lobby NPCs

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,3 +22,9 @@ bungeecord:
 mobs:
   iron-golem:
     damage: 4.0
+
+animations:
+  lobby-npc:
+    enable: true
+    levitation-strength: 0.1
+    presentation-speed: 1.0
